scrollbar fixe

--- a/client/src/components/shared/style.css
+++ b/client/src/components/shared/style.css
@@ -2,6 +2,10 @@
   color: white;
 }
 
+#hidden-scrollbar {
+  scrollbar-color: transparent transparent;
+}
+
 #hidden-scrollbar::-webkit-scrollbar {
   width: 1px; /* Adjust the width as needed */
 }
@@ -13,24 +17,22 @@
 #custom-scrollbar {
   overflow-y: scroll;
   scrollbar-width: thin; /* For Firefox */
-  scrollbar-color: transparent transparent; /* For Firefox */
+  scrollbar-color: transparent transparent;
   transition: scrollbar-color 0.5s ease;
 }
 
-/* Hide scrollbar by default */
-#custom-scrollbar::-webkit-scrollbar {
+#custom-scrollbar:hover::-webkit-scrollbar {
   width: 12px;
-  position: absolute;
-}
-
-#custom-scrollbar::-webkit-scrollbar-thumb {
-  background-color: transparent;
 }
 
 #custom-scrollbar:hover::-webkit-scrollbar-thumb {
-  background-color: #757575;
+  background-color: rgba(81, 81, 81, 0.5);
 }
 
-#custom-scrollbar::-webkit-scrollbar-track {
-  background-color: transparent;
+#custom-scrollbar:hover {
+  scrollbar-color: rgba(81, 81, 81, 0.5) transparent;
+}
+
+#custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(220, 220, 220, 0.5);
 }
